; ModuleID = '/home/carl/AnghaBench/sqlcipher/ext/lsm1/lsm-test/extr_lsmtest8.c_testWriteFile.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/ext/lsm1/lsm-test/extr_lsmtest8.c_testWriteFile.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [4 x i8] c"r+b\00", align 1
@SEEK_SET = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @testWriteFile(i8* %0, i32 %1, i8* %2, i32 %3, i32* %4) #0 {
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  store i8* %0, i8** %6, align 8
  store i32 %1, i32* %7, align 4
  store i8* %2, i8** %8, align 8
  store i32 %3, i32* %9, align 4
  store i32* %4, i32** %10, align 8
  %12 = load i32*, i32** %10, align 8
  %13 = load i32, i32* %12, align 4
  %14 = icmp eq i32 %13, 0
  br i1 %14, label %15, label %49

15:                                               ; preds = %5
  %16 = load i8*, i8** %6, align 8
  %17 = call i32* @fopen(i8* %16, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0))
  store i32* %17, i32** %11, align 8
  %18 = load i32*, i32** %11, align 8
  %19 = icmp eq i32* %18, null
  br i1 %19, label %20, label %22

20:                                               ; preds = %15
  %21 = load i32*, i32** %10, align 8
  store i32 1, i32* %21, align 4
  br label %48

22:                                               ; preds = %15
  %23 = load i32*, i32** %11, align 8
  %24 = load i32, i32* %7, align 4
  %25 = load i32, i32* @SEEK_SET, align 4
  %26 = call i64 @fseek(i32* %23, i32 %24, i32 %25)
  %27 = icmp ne i64 0, %26
  br i1 %27, label %28, label %30

28:                                               ; preds = %22
  %29 = load i32*, i32** %10, align 8
  store i32 1, i32* %29, align 4
  br label %45

30:                                               ; preds = %22
  %31 = load i32, i32* %9, align 4
  %32 = icmp sge i32 %31, 0
  %33 = zext i1 %32 to i32
  %34 = call i32 @assert(i32 %33)
  %35 = load i32, i32* %9, align 4
  %36 = sext i32 %35 to i64
  %37 = load i8*, i8** %8, align 8
  %38 = load i32, i32* %9, align 4
  %39 = load i32*, i32** %11, align 8
  %40 = call i64 @fwrite(i8* %37, i32 1, i32 %38, i32* %39)
  %41 = icmp ne i64 %36, %40
  br i1 %41, label %42, label %44

42:                                               ; preds = %30
  %43 = load i32*, i32** %10, align 8
  store i32 1, i32* %43, align 4
  br label %44

44:                                               ; preds = %42, %30
  br label %45

45:                                               ; preds = %44, %28
  %46 = load i32*, i32** %11, align 8
  %47 = call i32 @fclose(i32* %46)
  br label %48

48:                                               ; preds = %45, %20
  br label %49

49:                                               ; preds = %48, %5
  ret void
}

declare dso_local i32* @fopen(i8*, i8*) #1

declare dso_local i64 @fseek(i32*, i32, i32) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i64 @fwrite(i8*, i32, i32, i32*) #1

declare dso_local i32 @fclose(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
